structural-typing/tests/ui/modify_duplicate.stderr
error: Conflicting modifications for field 'name': +name then -name
  --> tests/ui/modify_duplicate.rs:3:1
   |
 3 | #[structural]
   | ^^^^^^^^^^^^^
...
10 |     type Duplicate = user::modify!(user::AllAbsent, +name, -name);
   |                      -------------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `__user__modify_name` which comes from the expansion of the macro `user::modify` (in Nightly builds, run with -Z macro-backtrace for more info)
